# dca_btc

./: .env.example  Cargo.toml  DOCS.md  Dockerfile  README.md  dca_btc.service  justfile
migrations/: 20240201000000_create_trades.sql  20260201000001_add_receive_amount.sql  20260622000000_add_status_to_trades.sql
src/: bitkub.rs  bitkub.rs_snippet_order_history  bitkub.rs_snippet_verify_trades_func  bot.rs  db.rs  main.rs  models.rs
