[package]
name = "dca_btc"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15.7"
hex = "0.4.3"
hmac = "0.12.1"
reqwest = { version = "0.13.1", default-features = false, features = ["blocking", "json", "rustls"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tokio = { version = "1.43.0", features = ["full"] }
teloxide = { version = "0.13.0", default-features = false, features = ["macros", "rustls", "ctrlc_handler"] }
sqlx = { version = "0.8.3", default-features = false, features = ["postgres", "runtime-tokio-rustls", "chrono", "macros", "migrate"] }
chrono = { version = "0.4.39", features = ["serde"] }
tokio-cron-scheduler = "0.15.1"
